Atualizações (fist commit)

--- a/pages/comentarios.html
+++ b/pages/comentarios.html
@@ -32,6 +32,48 @@
 
     </header>
 
+ <div class="main-conteiner">
+    <div class="conteiner">
+      
+        <div class="comment">
+            <img class="user" src="./images/perfil.png">
+            <br>
+            Usuário#4567 ⭐⭐⭐⭐⭐
+            <br>
+            <br>
+            <br>
+            <br>
+            Perfeição. Esse filme engloba muitas referências, além de trazer uma boa história consigo ,sem fazer com que a história tenha furos.
+O filme dá um final ótimo pra Steve,Tony e Natasha ,embora não quisemos suas mortes.
+A cena final é simplesmente de tirar o fôlego,e dá um final digno pra um excelente vilão.
+Recomendo muito assistir esse filme,tendo assistido os anteriores para não se perder durante as referências.
+        </div>
+
+        <div class="comment">
+            <img class="user" src="./images/perfil.png">
+            <br>
+            Usuário#5379 ⭐⭐⭐⭐⭐
+            <br>
+            <br>
+            <br>
+            <br>
+            Simplesmente a melhor sessão de cinema da minha vida. O filme tem, sim, alguns furos, mas não prejudica de maneira alguma a qualidade dele. O início é um pouco devagar pra quem busca ação num piscar de olhos, porém fica cada vez melhor. Digno de fechar essa fase tão incrível da Marvel. Recomendo demais. Sempre!
+        </div>
+
+        <div class="comment">
+            <img class="user" src="./images/perfil.png">
+            <br>
+            Usuário#3411 ⭐⭐⭐⭐
+            <br>
+            <br>
+            <br>
+            <br>
+            Entrega tudo o que promete e até um pouco mais, e continua um ótimo filme e sempre guardado no coração dos fãs, mesmo 3 anos após o lançamento. Mas, infelizmente, não vê problema em entregar um roteiro com furos extremamente notáveis pra entregar o que quer. De qualquer forma, trata bem os personagens, encerra a construção de tudo que foi feito no MCU até aqui e fecha com chave de ouro a saga da formação original dos Vingadores.
+        </div>
+
+    </div>
+</div>
+
     <footer>
         <img style="object-fit: contain;" class="logo" src="./images/marvel.png"/>
         <span>Todos os direitos reservados &copy;</span>
@@ -57,5 +99,10 @@
             </ul>
         </nav>
     </footer>
+    <div class="social-media">
+        <a href="https://github.com/Alexandre459/Projeto-curso" target="_blank">
+          <img style="object-fit: contain;" class="github" src="./images/github.png"/>
+        </a>
+        </div>
 </body>
 </html>
