--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -32,6 +32,25 @@
 
     </header>
 
+    <div class="error">
+        Devido a um erro, estamos sem imagens atualmente. Agradecemos a compreensão.
+    </div>
+
+    <div class="error-mobile">
+        Devido a um erro, estamos sem imagens atualmente. <br> <br> Agradecemos a compreensão.
+    </div>
+
+    <div class="cards-conteiner">
+        <div class="cards-content">
+            <div class="card banner-1"></div>
+            <div class="card banner-2"></div>
+            <div class="card banner-3"></div>
+            <div class="card banner-4"></div>
+            <div class="card banner-5"></div>
+            <div class="card banner-6"></div>
+        </div>
+    </div>
+
     <footer>
         <img style="object-fit: contain;" class="logo" src="./images/marvel.png"/>
         <span>Todos os direitos reservados &copy;</span>
@@ -57,5 +76,10 @@
             </ul>
         </nav>
     </footer>
+    <div class="social-media">
+        <a href="https://github.com/Alexandre459/Projeto-curso" target="_blank">
+          <img style="object-fit: contain;" class="github" src="./images/github.png"/>
+        </a>
+        </div>
 </body>
 </html>
