--- a/pages/index.html
+++ b/pages/index.html
@@ -6,9 +6,12 @@
     <title>Vigadores Ultimato - 2019</title>
     <link rel="stylesheet" href="./css/style.css">
     <script defer src="./js/loja.js"></script>
+    <script defer src="./js/script.js"></script>
 </head>
 <body>
     <header>
+        <span class="usuario"></span>
+
         <img class="logo" src="./images/marvel.png">
 
         <nav>
@@ -86,6 +89,11 @@
                     </a>
             </ul>
         </nav>
+        <div class="social-media">
+            <a href="https://github.com/Alexandre459/Projeto-curso" target="_blank">
+              <img style="object-fit: contain;" class="github" src="./images/github.png"/>
+            </a>
+            </div>
     </footer>
 </body>
 </html>
