--- a/pages/contato.html
+++ b/pages/contato.html
@@ -33,13 +33,15 @@
     </header>
 
     <div class="corpo">
+
         <form class="contact-form">
             <h1>Contato</h1>
             <input class="contact-input" placeholder="Nome" type="text" required autofocus>
             <input class="contact-input" placeholder="Email" type="email" required autofocus>
-            <textarea class="contact-form" placeholder="Mensagem" required autofocus></textarea>
+            <textarea class="text" placeholder="Mensagem" required autofocus></textarea>
 
-            <button class="button" type="submit" onclick="msg()">Enviar</button>
+            <button class="button" type="submit" disabled>Enviar</button>
+            <br>
         </form>
     </div>
     <footer>
@@ -66,6 +68,11 @@
                     </a>
             </ul>
         </nav>
+        <div class="social-media">
+          <a href="https://github.com/Alexandre459/Projeto-curso" target="_blank">
+            <img style="object-fit: contain;" class="github" src="./images/github.png"/>
+          </a>
+          </div>
     </footer>
 </body>
 </html>
