--- a/pages/login.html
+++ b/pages/login.html
@@ -16,21 +16,8 @@
 
       <form class="login-form">
 
-        <input type="text" placeholder="Nome de Usuário" class="login-input" autofocus required>
+        <input type="text" placeholder="Nome de Usuário" class="login-input" maxlength="19" autofocus required>
         <button type="submit" class="login-button" disabled >Entrar</button>
-        <br>
-        <br>
-
-        <div class="social-media"> 
-          <a href="" target="_blank">
-              <i class="fa-brands fa-github"></i>
-          </a>
-  
-          <a href="" target="_blank">
-              <i class="fa-brands fa-discord"></i>
-          </a>
-          </div>
-
       </form>
     </div>
  </section>
