--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -33,11 +33,11 @@
     </header>
 
     <div class="error">
-        Devido a um erro, estamos sem imagens atualmente. Agradecemos a compreensão.
+        Devido a um erro estamos sem imagens atualmente. Agradecemos a compreensão.
     </div>
 
     <div class="error-mobile">
-        Devido a um erro, estamos sem imagens atualmente. <br> <br> Agradecemos a compreensão.
+        Devido a um erro estamos sem imagens atualmente. <br> <br> Agradecemos a compreensão.
     </div>
 
     <div class="cards-conteiner">
