--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bilheteria | Login</title>
     <link rel="stylesheet" href="./css/login.css">
-    <script defer src="/js/login.js"></script>
+    <script defer src="login.js"></script>
 </head>
 <body>
   <section class="area-login">
